# polar-express

./: .gitignore  CLAUDE.md  LICENSE  README.md  jsonpath_expr.py  jsonpath_to_polars.py  polar_mapper.py  predicate_parser.py  pyproject.toml  reddit-api-sample.json  reddit-author-jsonpath.json  run_tests.py
examples/: advanced_usage.py  basic_usage.py  polar_express_demo.ipynb  table_mapper_example.py
polar_express/: __init__.py
polar_express/conversion/: __init__.py  jsonpath_to_polars.py
polar_express/conversion/handlers/: __init__.py  array_handlers.py  field_handlers.py
polar_express/core/: __init__.py  jsonpath_expr.py  polar_mapper.py  table_mapper.py
polar_express/parsing/: __init__.py  path_parser.py  predicate_parser.py
polar_express/utils/: __init__.py  tokens.py
tests/: __init__.py  conftest.py  test_integration.py  test_jsonpath_conversion.py  test_jsonpath_expr.py  test_polar_mapper.py  test_table_mapper.py  test_tokens.py
